namespace Code.Gameplay.Features.Animations
{
    public enum AnimationTypeId
    {
        Unknown = 0,
        Block = 1,
        DefaultAttack = 2,
        Dodge = 3,
        Counterattack = 4,
        DoubleStrike1 = 5,
        DoubleStrike2 = 6,
        Knockdown = 7,
        Getup = 8,
        Hit = 9,
        MoveForward = 10,
        MoveBackward = 11,
        MoveToPosition = 12,
        Idle = 13,
    }
}
